Demo page of Dynamic URLs #1

--- a/example/demo.html
+++ b/example/demo.html
@@ -536,6 +536,52 @@
       </div>
     </div>
   </div>
+  <h1>Dynamic URL</h1>
+
+  <div data-demo-dynamic>
+    <div winch-scroll-trigger=".scroll-target">
+      <div class="row scroll-target" style="height:600px; overflow:scroll">
+        <div class="col-md-6">
+          <p>
+            <winch-img src="http://placehold.it/350x150&text=Static"></winch-img>
+          </p>
+          <p>
+            <winch-img img-url="getUrlExp"></winch-img>
+          </p>
+          <p>
+            <winch-img img-url="getUrl(1)"></winch-img>
+          </p>
+          <p>
+            <winch-img img-url="getUrl(2)"></winch-img>
+          </p>
+          <p>
+            <winch-img img-url="getUrl(3)"></winch-img>
+          </p>
+          <p>
+            <winch-img img-url="getUrl(4)"></winch-img>
+          </p>
+          <p>
+            <winch-img img-url="getUrl(5)"></winch-img>
+          </p>
+          <p>
+            <winch-img img-url="getUrl()"></winch-img>
+          </p>
+          <p>
+            <winch-img img-url="getUrl()"></winch-img>
+          </p>
+          <p>
+            <winch-img img-url="getUrl()"></winch-img>
+          </p>
+          <p>
+            <winch-img img-url="getUrl()"></winch-img>
+          </p>
+          <p>
+            <winch-img img-url="getUrl()"></winch-img>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
 <script type="text/javascript" src="../winch.js"></script>
