#5 Split Files into smaller pieces for for easier use

--- a/example/demo.html
+++ b/example/demo.html
@@ -584,7 +584,13 @@
   </div>
 </div>
 <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
-<script type="text/javascript" src="../winch.js"></script>
+<script type="text/javascript" src="../files/winch.js"></script>
+<script type="text/javascript" src="../files/winch-master.js"></script>
+<script type="text/javascript" src="../files/winch-img.js"></script>
+<script type="text/javascript" src="../files/winch-scroll.js"></script>
+<script type="text/javascript" src="../files/winch-filter.js"></script>
+<script type="text/javascript" src="../files/winch-factory.js"></script>
+<script type="text/javascript" src="../files/winch-throttle.js"></script>
 <script type="text/javascript" src="demohelpers.js"></script>
 <script>
   angular.bootstrap(document, ['DemoHelper']);
